<resources>
    <string name="app_name">Calculator</string>

    <string name="backgroundText">8888888888</string>
    <string name="calculatorText">Calculator</string>

    <string name="acText">AC</string>
    <string name="plusMinusText">+/-</string>
    <string name="percentText">%</string>
    <string name="divisionText">÷</string>

    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="multipleText">X</string>

    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="minusText">-</string>

    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="plusText">+</string>

    <string name="zeroText">0</string>
    <string name="commaText">,</string>
    <string name="equalsText">=</string>
</resources>